--- a/templates/noobnews/home.html
+++ b/templates/noobnews/home.html
@@ -1,46 +1,81 @@
 {% extends 'noobnews/base.html' %}
 {% load staticfiles %}
-{% block title_block %}
-Home
-{% endblock %}
-{% block body_block %}
+<head>
+  <meta charset="UTF-8">
+{% block title_block %}{{ videoGame.name }}{% endblock %}
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+{% block videoG %}    {% endblock %}
+<link rel="stylesheet" href="/static/css/videoGameBootstrap.css">
+<link rel="stylesheet" href="/static/css/noobnews.css">
+</head>
 
+{% block body_block %}
+<style>
+  .centered {
+  position: absolute;
+  top: 60%;
+  left: 35%;
+  font-size: 20px;
+  transform: translate(-50%, -50%);
+}* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+  overflow:hidden;
+  width:330px;
+  height:330px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+  </style>
 
 <div class="homecontent">
-  <div class="block x1"><img style="height: inherit; width:inherit;" src="/static/videogameImages/breathOfTheWild.jpg"></div>
-  <div class="block x2">
+
     <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width:100%; height:100%;" >
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner" style="width:100%; height:100%;">
-        <div class="item active" style="width:100%; height:100%;">
-          <img style="height: inherit; width:inherit;" src="/static/videogameImages/breathOfTheWild.jpg" alt=""">
-        </div>
-        {% for v in top40List %}
-        <div class="item" style="width:100%; height:100%;">
-          <img style="height: inherit; width:inherit;" src="{{ v.image }}" alt="{{ v.name }}" >
-        </div>
-        {% endfor %}
-      </div>
+
+          <img src="{% for v in top40List %} {{ v.image }}  {% endfor %}" style="width:100%; height:100%;"alt=""">
+          <div class="centered"><h1 style= "text-col">It's dangerous to go alone,</h1>
+          <button>View Top 40 </button> </div>
     </div>
-  </div>
-  <div class="block x3">
+    <br>
+
     <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width:100%; height:100%;" >
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner" style="width:100%; height:100%;">
-        <div class="item active" style="width:100%; height:100%;">
-          <img style="height: inherit; width:inherit;" src="/static/videogameImages/breathOfTheWild.jpg" alt=""">
-        </div>
-        {% for n in newList %}
-        <div class="item" style="width:100%; height:100%;">
-          <img style="height: inherit; width:inherit;" src="{{ n.image }}" alt="{{ n.name }}" >
-        </div>
-        {% endfor %}
-      </div>
-    </div>
+      <h1>What's Hot</h1>
+      <div class="seperator"> </div>
+    <div class="row">
+  <div class="column">
+    <img src="/static/videogameImages/fallout4.jpg">
   </div>
-  <div class="block x4">4</div>
-  <div class="block x5">5</div>
+  <div class="column">
+    <img src="/static/videogameImages/farCry5.jpg">
+  </div>
+  <div class="column">
+    <img src="/static/videogameImages/Sun.jpg" >
+  </div>
 </div>
+</div>
+<h1>Stream of the Week</h1>
+<div id="myCarousel" class="carousel slide" data-ride="carousel" style="width:100%; height:100%;" >
+      <img src="/static/videogameImages/breathOfTheWild.jpg" style="width:100%; height:100%;"alt=""">
+      <div class="centered"><h1 style= "text-col">It's dangerous to go alone,</h1>
+      <button>View Top 40 </button> </div>
 
 
+
+</div>
+<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto+Condensed'>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/css/swiper.min.css'>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+<script src="/static/js/index.js"></script>
 {% endblock %}
