--- a/templates/noobnews/videogame.html
+++ b/templates/noobnews/videogame.html
@@ -218,60 +218,44 @@
 
 
           <div class="comment-item">
-            <div class="separator"></div>
-
-            <div class="comment-item">
-              <h1>Comment Section</h1>
+<h1>Comment Section</h1>
 
 
-              <div class="separator"></div>
-              <div class="comment-item">
-                <div class="comment-item--inner">
-                  {% if genres %}
-                  {% for g in genres %}
-                  <div class="is-left">
-                    <div class="avatar">
-                      {% for u in users%}
-                      {% if u.player_tag == g.user_id.player_tag %}
-                      <img src="{{ u.user_profile_image.url }}" style="width: 100%; height:120px;" alt="">
-                      {%endif%}
-                      {%endfor%}
+  <div class="separator"></div>
+<div class="comment-item">
+<div class="comment-item--inner">
+  {% if genres %}
+  {% for g in genres %}
 
 
-                      <div class="is-left">
-                        <div class="avatar">
-                          {% for u in users%}
-                          {% ifequal u.player_tag g.user_id.player_tag %}
-                          <img src="/{{u.user_profile_image }}" style="width: 100%; height:120px;" alt="">
-                          {%endifequal%}
-                          {%endfor%}
+  <div class="is-left">
+    <div class="avatar">
+      {% for u in users%}
+      {% ifequal  u.player_tag g.user_id.player_tag %}
+      <img src="/{{u.user_profile_image }}"  style="width: 100%; height:120px;"alt="">
 
-                        </div>
-                      </div>
-                      <div class="is-right">
-                        <div class="is-right--inner">
-                          <br>
 
-                          <div class="name">{{ g.user_id }}- <small>{{ g.publish_date }}</small>
-                            <div><br>
-                              <div class="blog-slider__text" style=" font-weight: normal;">{{ g.comments }}</div>
-                              <span class="share share-count share-plus">{{ g.comment_rating }}/5</span>
+      {%endifequal%}
+        {%endfor%}
 
-                              <br> <br>
-                            </div>
+      </div>
+  </div>
+  <div class="is-right">
+    <div class="is-right--inner">
+      <br>
 
-                          </div>
+      <div class="name">{{ g.user_id }}-    <small>{{ g.publish_date }}</small><div><br>
+        <div class="blog-slider__text" style=" font-weight: normal;">{{ g.comments }}</div>
+      <span class="share share-count share-plus">{{ g.comment_rating }}/5</span>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
 
-                        </div>
-                        {% endfor %}
-                        {% endif %}
-                      </div>
-                    </div>
 
-                  </div>
-
-                </div>
-                <!-- Might need this, probs wont</div> -->
+{% endfor %}
+{% endif %}
   </nav>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
