--- a/templates/noobnews/videogame.html
+++ b/templates/noobnews/videogame.html
@@ -136,7 +136,7 @@
         </div>
         <div class="blog-slider__item swiper-slide">
           <div class="blog-slider__img">
-            <div id=frame> </div>
+            <div id="frameing"> </div>
           </div>
           <div class="blog-slider__content">
             <div class="blog-slider__title" id='Ttitle'></div>
@@ -211,52 +211,54 @@
           {% endif %}
         </main>
 
-        <div class="content scroll">
-          <!--To embred a video you need to https://www.youtube.com/embed/videoseries?list= then the playlist code, the playlist code could be stored in the database -->
-          <!--Comments Sections -->
 
 
 
-          <div class="comment-item">
-<h1>Comment Section</h1>
+
+                  <!--To embred a video you need to https://www.youtube.com/embed/videoseries?list= then the playlist code, the playlist code could be stored in the database -->
+                    <!--Comments Sections -->
 
 
-  <div class="separator"></div>
-<div class="comment-item">
-<div class="comment-item--inner">
-  {% if genres %}
-  {% for g in genres %}
+
+                    <div class="comment-item">
+                <h1>Comment Section</h1>
+                  <div class="separator"></div>
+              <div class="comment-item">
+                <div class="scroll">
+                <div class="comment-item--inner">
+
+                  {% if genres %}
+                  {% for g in genres %}
 
 
-  <div class="is-left">
-    <div class="avatar">
-      {% for u in users%}
-      {% ifequal  u.player_tag g.user_id.player_tag %}
-      <img src="/{{u.user_profile_image }}"  style="width: 100%; height:120px;"alt="">
+                  <div class="is-left">
+                    <div class="avatar">
+                      {% for u in users%}
+                      {% ifequal  u.player_tag g.user_id.player_tag %}
+                      <img src="/media/{{u.user_profile_image }}"  style="width: 100%; height:120px;"alt="">
+                      {%endifequal%}
+                        {%endfor%}
 
+                      </div>
+                  </div>
+                  <div class="is-right">
+                    <div class="is-right--inner">
+                      <br>
 
-      {%endifequal%}
-        {%endfor%}
+                      <div class="name">{{ g.user_id }}-    <small>{{ g.publish_date }}</small><div><br>
+                        <div class="blog-slider__text" style=" font-weight: normal;">{{ g.comments }}</div>
+                      <span class="share share-count share-plus">{{ g.comment_rating }}/5</span>
+                      </div>
+                    </div>
+                  </div>
+                  <br><br>
 
-      </div>
-  </div>
-  <div class="is-right">
-    <div class="is-right--inner">
-      <br>
-
-      <div class="name">{{ g.user_id }}-    <small>{{ g.publish_date }}</small><div><br>
-        <div class="blog-slider__text" style=" font-weight: normal;">{{ g.comments }}</div>
-      <span class="share share-count share-plus">{{ g.comment_rating }}/5</span>
-      </div>
-    </div>
-  </div>
+          {% endfor %}
+                {% endif %}
+              </div>
+            </div>
 </div>
-</div>
-
-
-{% endfor %}
-{% endif %}
-  </nav>
+            </nav>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
@@ -284,7 +286,7 @@
         $("#streamer").append(x.author);;
         iframe = "<span><iframe width='560' height='315' src='https://player.twitch.tv/?autoplay=false&video=" + x.id +
           "'frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen></iframe></span>"
-        $("#frame").append(iframe);;
+        $("#frameing").append(iframe);;
       }
     }, "jsonp");
 
