--- a/templates/noobnews/cart.html
+++ b/templates/noobnews/cart.html
@@ -1,6 +1,4 @@
-{% extends 'noobnews/base.html' %} 
-{% load staticfiles %} 
-{% block body_block %}
+{% extends 'noobnews/base.html' %} {% load staticfiles %} {% block body_block %}
 
 <h3>test</h3>
 
@@ -11,6 +9,5 @@
 
 {{ s.name }}
 
-{% endfor %} 
-{% endif %} 
-{% endblock %}
+{% endfor %} {% endif %} {% endblock %}
+<!------ Test library funtionality ---------->
