--- a/templates/noobnews/profile.html
+++ b/templates/noobnews/profile.html
@@ -1,6 +1,10 @@
 {% extends 'noobnews/base.html' %}
 {% load staticfiles %}
-{% load crispy_forms_tags %} 
+{% load crispy_forms_tags %}
+{% block videoG %}
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+<script src="{% static "js/top40.js" %}"></script>
+{% endblock %}
 {% block body_block %}
 
 
@@ -20,23 +24,23 @@
               <h4 style="color:black;">
                  {{ user.userprofile.player_tag }}
               </h4><br />
-              
-                
+
+
                 <form method="POST"  enctype="multipart/form-data">
                   {% csrf_token %}
                    <!-- Display each form -->
-                  
-            
+
+
                   {{ user_form_update|crispy }}
                   {{ profile_form_update|crispy }}
-                 
-                  
+
+
                     <button type="submit" class="btn btn-labeled btn-info">
                       <span class="btn-label"></span>Update information
                     </button>
-                 
+
                 </form>
-            
+
 
             </div>
           </div>
@@ -58,167 +62,167 @@
  <br /><br /><br /><br />
 <div class="col-md-6 img">
     <h3 style="color:black;"> My library</h3><br />
-        
+
         <ul class="list-unstyled video-list-thumbs row">
           <li class="col-lg-3 col-sm-4 col-xs-6">
             <a href="#" >
               <img src="{{  game.0.image  }}" alt="" class="img-responsive"  height="130px" id="hover" />
-             
+
               <h4 style="color:black;">{{ game.0 }}</h4>
 
-              
+
             </a>
           </li>
           <li class="col-lg-3 col-sm-4 col-xs-6">
             <a href="#" title="">
               <img src="{{ MEDIA_URL }}{{ game.1.image}}" alt="" class="img-responsive"  height="130px" id="hover" />
               <h4 style="color:black;">{{ game.1  }}</h4>
-              
+
             </a>
           </li>
           <li class="col-lg-3 col-sm-4 col-xs-6">
             <a href="#" title="">
               <img src="{{ MEDIA_URL }}{{ game.2.image  }}" alt="" class="img-responsive"  height="130px" id="hover"/>
               <h4 style="color:black;">{{ game.2   }}</h4>
-              
 
-             
+
+
             </a>
           </li>
           <li class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
             <a href="#" title="">
               <img src="{{ MEDIA_URL }}{{ game.3.image }}" alt="" class="img-responsive"  height="130px" id="hover"/>
               <h4 style="color:black;">{{ game.3  }}</h4>
-              
+
             </a>
           </li>
           <li class="col-lg-3 col-sm-4 col-xs-6">
               <a href="#" title="">
                 <img src="{{ MEDIA_URL }}{{ game.4.image }}" alt="" class="img-responsive"  height="130px" id="hover" />
                 <h4 style="color:black;">{{ game.4  }}</h4>
-              
-               
+
+
               </a>
             </li>
             <li class="col-lg-3 col-sm-4 col-xs-6">
               <a href="#" title="">
                 <img src="{{ MEDIA_URL }}{{ game.5.image }}" alt="" class="img-responsive"  height="130px" id="hover"/>
                 <h4 style="color:black;">{{ game.5  }}</h4>
-                
+
               </a>
             </li>
             <li class="col-lg-3 col-sm-4 col-xs-6">
               <a href="#" title="">
                 <img src="{{ MEDIA_URL }}{{ game.6.image }}" alt="" class="img-responsive" height="130px" id="hover"/>
                 <h4 style="color:black;">{{ game.6  }}</h4>
-                
-               
+
+
               </a>
             </li>
             <li class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
               <a href="#" title="">
                 <img src="{{ MEDIA_URL }}{{ game.7.image }}" alt="" class="img-responsive"  height="130px" id="hover"/>
                 <h4 style="color:black;">{{ game.7  }}</h4>
-                
+
               </a>
-            </li>        
-            
+            </li>
+
         </ul>
-          
+
   </div>
-  
-  
+
+
 
 <div class="col-md-6 img">
     <h3 style="color:rgb(0, 0, 0, 0);"> Grid 2 </h3><br />
-          
+
     <ul class="list-unstyled video-list-thumbs row">
-       
+
         <li class="col-lg-3 col-sm-4 col-xs-6">
           <a href="#" title="">
             <img src="{{ MEDIA_URL }}{{ game.8.image }}" alt="" class="img-responsive"  height="130px" id="hover" />
             <h4 style="color:black;">{{ game.8  }}</h4>
-          
-           
+
+
           </a>
         </li>
         <li class="col-lg-3 col-sm-4 col-xs-6">
           <a href="#" title="">
             <img src="{{ MEDIA_URL }}{{ game.9.image }}" alt="" class="img-responsive"  height="130px" id="hover"/>
             <h4 style="color:black;">{{ game.9  }}</h4>
-            
+
           </a>
         </li>
         <li class="col-lg-3 col-sm-4 col-xs-6">
           <a href="#" title="">
             <img src="{{ MEDIA_URL }}{{ game.10.image }}" alt="" class="img-responsive"  height="130px" id="hover"/>
             <h4 style="color:black;">{{ game.10  }}</h4>
-            
-           
+
+
           </a>
         </li>
         <li class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
           <a href="#" title="">
             <img src="{{ MEDIA_URL }}{{ game.11.image }}" alt="" class="img-responsive" height="130px" id="hover" />
             <h4 style="color:black;">{{ game.11  }}</h4>
-            
+
           </a>
         </li>
         <li class="col-lg-3 col-sm-4 col-xs-6">
             <a href="#" title="">
               <img src="{{ MEDIA_URL }}{{ game.12.image }}" alt="" class="img-responsive"  height="130px" id="hover" />
               <h4 style="color:black;">{{ game.12  }}</h4>
-            
-             
+
+
             </a>
           </li>
           <li class="col-lg-3 col-sm-4 col-xs-6">
             <a href="#" title="">
               <img src="{{ MEDIA_URL }}{{ game.13.image }}" alt="" class="img-responsive"  height="130px" id="hover" />
               <h4 style="color:black;">{{ game.13  }}</h4>
-              
+
             </a>
           </li>
           <li class="col-lg-3 col-sm-4 col-xs-6">
             <a href="#" title="">
               <img src="{{ MEDIA_URL }}{{ game.14.image }}" alt="" class="img-responsive"  height="130px" id="hover" />
               <h4 style="color:black;">{{ game.14  }}</h4>
-              
-             
+
+
             </a>
           </li>
           <li class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
             <a href="#" title="">
               <img src="{{ MEDIA_URL }}{{ game.15.image }}" alt="" class="img-responsive" height="130px" id="hover"/>
               <h4 style="color:black;">{{ game.15  }}</h4>
-              
+
             </a>
           </li>
-         
-              
-                  
-          
+
+
+
+
       </ul>
-    
+
   </div>
 
 </div>
 
 <!------ Test library funtionality ---------->
-  
+
 {% for s in game %}
 
 <h3 style="color:rgb(0, 0, 0, 0);" >{{ s.name }} </h3>
 
-{% endfor %} 
+{% endfor %}
 
 {% endif %}
 
 
-  
-  
-  
-  
+
+
+
+
 
 
 
