--- a/templates/noobnews/videogame.html
+++ b/templates/noobnews/videogame.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
+<!--This page is the template for the Video Game screen  -->
+
 {% extends 'noobnews/base.html' %}
 {% load staticfiles %}
 <html lang="en">
-
-
 <head>
   <meta charset="UTF-8">
   {% block title_block %}{{ videoGame.name }}{% endblock %}
@@ -37,7 +37,7 @@
       <h5>{{ videoGame.rating }}</h5>
       <h6>{{ videoGame.release }}</h6>
 
-      <!--We only want users who are loged to edit out games- in the future would be beter if on admin users can edit  -->
+      <!--We only want users who are loged to edit our games- in the future would be beter if on admin users can edit  -->
       {% if user.is_authenticated %}
       <button id="button2" name="button2" style="margin-right: 110px;" type="submit" class="button2" onclick="window.location.href='/noobnews/videogamesuggest/{{ videoGame.slug }}'">Edit</button>
       {% endif %}
@@ -54,8 +54,6 @@
       </button>
     </div>
   </main>
-
-
 
   <nav>
     <!--First Set of scroll cards, show game triva, cheats and easter eggs if there is any stored in the database -->
@@ -79,7 +77,7 @@
           </div>
         </div>
         {% endifnotequal %}
-  {% ifnotequal videoGame.trivia "" %}
+        {% ifnotequal videoGame.trivia "" %}
         <div class="blog-slider__item swiper-slide">
 
           <div class="blog-slider__content">
@@ -87,17 +85,13 @@
             <div class="blog-slider__text">{{ videoGame.trivia }}</div>
           </div>
         </div>
-          {% endifnotequal %}
-
-
-
-
+        {% endifnotequal %}
       </div>
       <div class="blog-slider__pagination"></div>
     </div>
     <br>
 
-<!-- Next Set of cards, uses youtbe and twitch api to show youtube videos, comments and description of each of the videos -->
+    <!-- Next Set of cards, uses youtbe and twitch api to show youtube videos, comments and description of each of the videos -->
     <div class="mypanel"></div>
     <div class="blog-slider">
       <div class="blog-slider__wrp swiper-wrapper">
@@ -161,7 +155,7 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/js/swiper.min.js'></script>
 
-
+    <!--This is the add Comment model- basically it's a pop-up allowing with a form   -->
     <div class="title">
       <div id="AddComment" class="modal">
         <form id="videogame_form" class="modal-content animate" method="POST" action="/noobnews/videogame/{{ videogame.slug }}/">
@@ -193,140 +187,78 @@
 
       <a>
         <main>
+          <!--This button calls the Comment model to appear  -->
           {% if user.is_authenticated %}
           <button id="button2" name="button2" type="submit" class="button2" onclick="document.getElementById('AddComment').style.display='block'">Leave a Comment</button>
           {% endif %}
         </main>
 
+        <!--Comments Section -->
+        <!-- This section collects all of the comments from the review table -->
+        <div class="comment-item">
+          <h1>Comment Section</h1>
+          <div class="separator"></div>
+          <div class="comment-item">
+            <div class="scroll">
+              <div class="comment-item--inner">
+
+                {% if genres %}
+                {% for g in genres %}
 
 
+                <div class="is-left">
+                  <div class="avatar">
+                    {% for u in users%}
+                    {% ifequal u.player_tag g.user_id.player_tag %}
+                    <img src="/media/{{u.user_profile_image }}" style="width: 100%; height:120px;" alt="">
+                    {%endifequal%}
+                    {%endfor%}
 
-
-                  <!--To embred a video you need to https://www.youtube.com/embed/videoseries?list= then the playlist code, the playlist code could be stored in the database -->
-                    <!--Comments Sections -->
-
-
-
-                    <div class="comment-item">
-                <h1>Comment Section</h1>
-                  <div class="separator"></div>
-              <div class="comment-item">
-                <div class="scroll">
-                <div class="comment-item--inner">
-
-                  {% if genres %}
-                  {% for g in genres %}
-
-
-                  <div class="is-left">
-                    <div class="avatar">
-                      {% for u in users%}
-                      {% ifequal  u.player_tag g.user_id.player_tag %}
-                      <img src="/media/{{u.user_profile_image }}"  style="width: 100%; height:120px;"alt="">
-                      {%endifequal%}
-                        {%endfor%}
-
-                      </div>
                   </div>
-                  <div class="is-right">
-                    <div class="is-right--inner">
-                      <br>
+                </div>
+                <div class="is-right">
+                  <div class="is-right--inner">
+                    <br>
 
-                      <div class="name">{{ g.user_id }}-    <small>{{ g.publish_date }}</small><div><br>
+                    <div class="name">{{ g.user_id }}- <small>{{ g.publish_date }}</small>
+                      <div><br>
                         <div class="blog-slider__text" style=" font-weight: normal;">{{ g.comments }}</div>
-                      <span class="share share-count share-plus">{{ g.comment_rating }}/5</span>
+                        <span class="share share-count share-plus">{{ g.comment_rating }}/5</span>
                       </div>
                     </div>
                   </div>
                   <br><br>
 
-          {% endfor %}
-                {% endif %}
+                  {% endfor %}
+                  {% endif %}
+                </div>
               </div>
             </div>
-</div>
-            </nav>
+  </nav>
 
-  
+
 
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/static/js/external_apis.js"></script>
-<script>
-  loadApis("{{videoGame.name}}", "{{videoGame.speedRun}}", "{{videoGame.youtubeurl}}")
-</script>
-  <!-- <script>
-    console.log("HELLLOOOOOo")
-    var id = "client_id=lafleu2a48dpivopblprona7jhjf3j"
-    $.getJSON("https://api.twitch.tv/kraken/videos/top?game={{ videoGame.name }}&" + id, function(obj) {
-      for (var i = 0; i < 1; i++) {
-        var x = {};
-        x.img = obj.videos[i].preview;
-        x.content = obj.videos[i].description.substring(0, 20);
-        x.url = obj.videos[i].url;
-        x.description = obj.videos[i].description;
-        x.id = obj.videos[i]._id;
-        x.author = obj.videos[i].channel.name;
-        x.views = obj.videos[i].views;
-        x.title = obj.videos[i].title.substring(0, 20);
-        $("#Tdesc").append(x.content);;
-        $("#Ttitle").append(x.title);;
-        $("#Tviews").append(x.views);;
-        $("#Ttitle").append(x.title);;
-        $("#Turl").append(x.url);;
-        $("#id").append(x.id);;
-        $("#streamer").append(x.author);;
-        iframe = "<span><iframe width='560' height='315' src='https://player.twitch.tv/?autoplay=false&video=" + x.id +
-          "'frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen></iframe></span>"
-        $("#frameing").append(iframe);;
-      }
-    }, "jsonp");
-    $.getJSON("https://api.twitch.tv/kraken/videos/{{videoGame.speedRun}}?" + id, function(obj) {
-      for (var i = 0; i < 1; i++) {
-        var x = {};
-        x.author = obj.channel.name;
-        x.views = obj.views;
-        x.title2 = obj.title.substring(0, 20);
-        $("#Stitle").append(x.title2);;
-        $("#Speedviews").append(x.views);;
-        $("#Speedstreamer").append(x.author);;
-      }
-    }, "jsonp");
-  </script>
-
   <script>
-    $.getJSON(' https://www.googleapis.com/youtube/v3/playlistItems?part=snippet&maxResults=1&playlistId={{ videoGame.youtubeurl }}&fields=items/snippet/title,items/snippet/description&key=AIzaSyDu4N6OHRVf81plK5FcmXb1P0L5Ef-nYMY', function(data) {
-      $.each(data.items, function(i, item) {
-        var videoDes = item['snippet']['description'];
-        var title = item['snippet']['title']
-        $("#desc").append(videoDes);;
-        $("#title").append(title);;
-      });
-    });
-    $.getJSON('https://player.twitch.tv/?autoplay=false&video={{ videoGame.speedRun }}', function(data) {
-      $.each(data.items, function(i, item) {
-        console.log(item);
-        var videoDes = item['snippet']['description'];
-        var title = item['snippet']['title']
-        $("#desc").append(videoDes);;
-        $("#title").append(title);;
-      });
-    });
-  </script> -->
+    loadApis("{{videoGame.name}}", "{{videoGame.speedRun}}", "{{videoGame.youtubeurl}}")
+</script>
 
-<div>
-  {% if user.is_authenticated %}
+<!-- This is the add to lib button, click this to add a game to your game lib -->
+  <div>
+    {% if user.is_authenticated %}
 
-<main>
-<form method='POST' action= '{%  url "profile" %}'>
-    {% csrf_token %}
-    <input type='hidden' name='selected_game'  value = '{{videoGame.id}}' />
-    <button type="submit">Add to library</button>
-  </form>
-</main>
-{% endif %}
-</div>
+    <main>
+      <form method='POST' action='{%  url "profile" %}'>
+        {% csrf_token %}
+        <input type='hidden' name='selected_game' value='{{videoGame.id}}' />
+        <button type="submit">Add to library</button>
+      </form>
+    </main>
+    {% endif %}
+  </div>
 
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto+Condensed'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
@@ -336,6 +268,6 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
   <script src="/static/js/index.js"></script>
 
-  
-  
+
+
   {% endblock %}
